--- a/BackEnd/pom.xml
+++ b/BackEnd/pom.xml
@@ -78,6 +78,15 @@
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
         
+        <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-parent -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-parent</artifactId>
+            <version>2.6.7</version>
+            <type>pom</type>
+        </dependency>
+
+        
 
     </dependencies>
 
