--- a/CVProfileProject/package.json
+++ b/CVProfileProject/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^14.0.0-next.0",
     "@angular/platform-browser-dynamic": "^14.0.0-next.0",
     "@angular/router": "^14.0.0-next.0",
+    "bootstrap": "^5.2.0",
     "bootstrap-icons": "^1.9.1",
     "localhost": "^0.4.1",
     "rxjs": "~7.5.0",
