--- a/BackEnd/src/main/resources/application.properties
+++ b/BackEnd/src/main/resources/application.properties
@@ -1,8 +1,12 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/backendrrt2?useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=
+#spring.datasource.url=jdbc:mysql://localhost:3306/backendrrt2?useSSL=false&serverTimezone=UTC
+#spring.datasource.username=root
+#spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+spring.datasource.url=jdbc:mysql://ucycmcuxkptnn2l2:udVzy4L9Iu6kaSPwUThi@bznbesklylxndyhsqyq6-mysql.services.clever-cloud.com:3306/bznbesklylxndyhsqyq6
+spring.datasource.username=ucycmcuxkptnn2l2
+spring.datasource.password=udVzy4L9Iu6kaSPwUThi
 
 #JWT
 jwt.secret = secret
